--- a/code/dev/parts/dashboard/modals/dashboard-new.modal.tpl.html
+++ b/code/dev/parts/dashboard/modals/dashboard-new.modal.tpl.html
@@ -20,7 +20,7 @@
         <option value="15">Each 15 Minutes</option>
         <option value="30">Each 30 Minutes</option>
         <option value="60">Each 1 Hour</option>
-        <option value="">No auto-refresh</option>
+        <option value="">No Auto-Refresh</option>
       </select>
     </div>
   </form>
