--- a/code/dev/parts/dashboard/modals/dashboard-delete.modal.tpl.html
+++ b/code/dev/parts/dashboard/modals/dashboard-delete.modal.tpl.html
@@ -1,11 +1,10 @@
 <div class="modal-header">
-  <h4 class="modal-title">Delete dashboard {{model.title}}</h4>
+  <h4 class="modal-title">Delete Dashboard {{model.title}}</h4>
 </div>
 <div class="modal-body">
   <form role="form">
     <div class="form-group">
-      <label for="widgetTitle">Are you sure you want to delete this dashboard ?</label>
-
+      <label for="widgetTitle">Are you sure you want to delete this dashboard?</label>
     </div>
   </form>
 </div>
