--- a/code/dev/parts/dashboard/modals/dashboard-edit-with-options.tpl.html
+++ b/code/dev/parts/dashboard/modals/dashboard-edit-with-options.tpl.html
@@ -12,7 +12,7 @@
       <label>Structure</label>
       <div class="radio" ng-repeat="(key, structure) in structures">
         <label>
-          <input type="radio" value="{{key}}" ng-model="model.structure" ng-change="changeStructure(key, structure)"> {{key}}
+          <input type="radio" value="{{key}}" ng-model="model.structure" ng-change="changeStructure(key, structure)"> {{key}} {{structure.title}}
         </label>
       </div>
     </div>
