--- a/code/dev/parts/reports/charts/hits-cache.html
+++ b/code/dev/parts/reports/charts/hits-cache.html
@@ -13,7 +13,7 @@
   <i class="glyphicon glyphicon-refresh spin"></i>&nbsp;
   Loading
 </div>
-<div ng-hide="!traffic.labels || !traffic.labels.length">
+<div class="auto-scroll" ng-hide="!traffic.labels || !traffic.labels.length">
   <!--<canvas id="line"-->
           <!--class="chart chart-line"-->
           <!--chart-options="chartOptions"-->
