--- a/code/dev/parts/reports/charts/requests.html
+++ b/code/dev/parts/reports/charts/requests.html
@@ -13,8 +13,8 @@
   <i class="glyphicon glyphicon-refresh spin"></i>&nbsp;
   Loading
 </div>
-<div ng-hide="!traffic.labels || !traffic.labels.length">
-  <!--<canvas class="chart chart-line"-->
+<div class="auto-scroll" ng-hide="!traffic.labels || !traffic.labels.length">
+  <!--<canvas class="chart chart-line"<--></-->
           <!--chart-options="chartOptions"-->
           <!--chart-data="traffic.data"-->
           <!--chart-labels="traffic.labels"-->
