Fix wight for  Auto-Refresh select-box

--- a/code/dev/parts/dashboard/dashboard-title.tpl.html
+++ b/code/dev/parts/dashboard/dashboard-title.tpl.html
@@ -6,7 +6,7 @@
     <span class="h5 form-inline pull-right">
       <!-- TODO: make directive autorefresh-time-period -->
       <div class="form-group">
-        <select class="select2 form-control fixed " ng-model="model.options.autorefresh">
+        <select class="select2 form-control" ng-model="model.options.autorefresh">
           <option value="5">Each 5 Minutes</option>
           <option value="15">Each 15 Minutes</option>
           <option value="30">Each 30 Minutes</option>
