--- a/code/parts/dashboard/modals/dashboard-new.modal.tpl.html
+++ b/code/parts/dashboard/modals/dashboard-new.modal.tpl.html
@@ -10,7 +10,7 @@
       <label>Structure</label>
       <div class=radio ng-repeat="(key, structure) in vm.structures">
         <label>
-          <input type=radio value={{key}} ng-model=model.structure ng-change="changeStructure(key, structure)"> {{key}} </label>
+          <input type="radio" value="{{key}}" ng-model="model.structure" ng-change="changeStructure(key, structure)"> {{key}} {{structure.title}}</label>
       </div>
     </div>
     <div class="form-group">
