--- a/code/parts/reports/charts/http-status-code.html
+++ b/code/parts/reports/charts/http-status-code.html
@@ -13,7 +13,7 @@
   <i class="glyphicon glyphicon-refresh spin"></i>&nbsp;
   Loading
 </div>
-<div ng-hide="!traffic.series || !traffic.series.length">
+<div class="auto-scroll"  ng-hide="!traffic.series || !traffic.series.length">
   <!--<canvas id="line"-->
           <!--class="chart chart-line"-->
           <!--chart-options="chartOptions"-->
