Create Edge Cache route, view and add some charts

--- a/code/dev/parts/layout.html
+++ b/code/dev/parts/layout.html
@@ -30,6 +30,7 @@
             <li ui-sref-active-if="{class: 'active-side-menu-item', state: 'index.reports'}">
                 <a ui-sref="index.reports.proxy" class="side-menu-item">Web Analytics</a>
                 <a ui-sref-active="active" ui-sref="index.reports.proxy" class="side-menu-sub-item">Proxy Traffic</a>
+                <a ui-sref-active="active" ui-sref="index.reports.edge-cache" class="side-menu-sub-item">Edge Cache Reports</a>
                 <a ui-sref-active="active" ui-sref="index.reports.topreports" class="side-menu-sub-item">Top Reports</a>
                 <a ui-sref-active="active" ui-sref="index.reports.top" class="side-menu-sub-item">Top Objects</a>
                 <a ui-sref-active="active" ui-sref="index.reports.fbt" class="side-menu-sub-item">FBT Reports</a>
