--- a/code/dev/parts/reports/edge-cache.html
+++ b/code/dev/parts/reports/edge-cache.html
@@ -45,7 +45,8 @@
                         <div class="col-lg-6">
                             <div class="col-lg-12 nd-block">
                                 <div hits-cache-chart
-                                     ng-domain="vm.model.domain">
+                                     ng-domain="vm.model.domain"
+                                     hide-filters="true">
                                 </div>
                             </div>
                         </div>
