--- a/code/dev/parts/dashboard/modals/dashboard-edit-with-options.tpl.html
+++ b/code/dev/parts/dashboard/modals/dashboard-edit-with-options.tpl.html
@@ -18,7 +18,7 @@
     </div>
     <div class="form-group">
       <label>Auto-Refresh</label>
-      <select class="select2 form-control fixed " ng-model="model.options.autorefresh">
+      <select class="select2 form-control" ng-model="model.options.autorefresh">
         <option value="5">Each 5 Minutes</option>
         <option value="15">Each 15 Minutes</option>
         <option value="30">Each 30 Minutes</option>
@@ -30,8 +30,6 @@
 </div>
 <div class="modal-footer">
   <dashboard-btn-delete model="model" class="pull-left"></dashboard-btn-delete>
-  <!-- <button class="btn btn-danger pull-left" ng-click="onDashboarDelete()"> Delete this dashboard</button> -->
-  <!-- <button type="button" class="btn btn-primary" ng-click="closeDialog()">Close</button>  -->
   <button type=button class="btn btn-default" ng-disabled="_isLoading" ng-click="closeDialog()">Cancel</button>
   <button type=button class="btn btn-primary" ng-disabled="editDashboardForm.$invalid || _isLoading" ng-click="toggleEditMode(model); closeDialog()">Save</button>
 </div>
