--- a/code/parts/dashboard/widgets/edit-proxy-traffic.html
+++ b/code/parts/dashboard/widgets/edit-proxy-traffic.html
@@ -4,9 +4,16 @@
     <div domain-select id="domain" ng-model="domain" on-select="onDomainSelected()" select-one="true"></div>
   </div>
   <div class="form-group">
-    <label for="domain">Filters</label>{{config.filters}}
+    <label for="domain">Filters</label>
   </div>
   <div class="form-inline">
+    <div class="form-group">
+      <select class="form-control fixed" ng-model="config.filters.count_last_day" ng-disabled="!domain">
+        <option value="1">Last 1 Day</option>
+        <option value="7">Last 7 Day</option>
+        <option value="30">Last 30 Day</option>
+      </select>
+    </div>
     <div class="form-group">
       <select id="country" class="form-control fixed" ngoptions="key as item for (key, item) in flCountry" ng-model="config.filters.country" ng-disabled="!domain">
         <option value="-">All Countries</option>
@@ -26,12 +33,8 @@
       </select>
     </div>
   </div>
-  <div class="form-group">
-    <label for="domain">Time Period</label>
-  </div>
-  <div class="form-group">
-    <!-- <label for="domain">Time period</label> -->
-    <!-- <input date-range-picker="" ng-model="config.filters.time_period.range" options="::datePicker.options" class="form-control date-picker select2" type="text" /> -->
-  </div>
-
+  <!-- <div class="form-group"> -->
+  <!-- <label for="domain">Time period</label> -->
+  <!-- <input date-range-picker="" ng-model="config.filters.time_period.range" options="::datePicker.options" class="form-control date-picker select2" type="text" /> -->
+  <!-- </div> -->
 </form>
