--- a/code/parts/dashboard/modals/dashboard-edit-with-options.tpl.html
+++ b/code/parts/dashboard/modals/dashboard-edit-with-options.tpl.html
@@ -18,7 +18,7 @@
     </div>
     <div class="form-group">
       <label>Auto-Refresh</label>
-      <select class="select2 form-control" ng-model="model.options.autorefresh">
+      <select class="select2 form-control fixed175" ng-model="model.options.autorefresh">
         <option value="5">Each 5 Minutes</option>
         <option value="15">Each 15 Minutes</option>
         <option value="30">Each 30 Minutes</option>
