--- a/code/widgets/adf-widget-analytics-proxy-traffic/src/widget-title-with-params.html
+++ b/code/widgets/adf-widget-analytics-proxy-traffic/src/widget-title-with-params.html
@@ -23,7 +23,7 @@
        </span>
 </h3>
 <small ng-if="definition.config.filters.count_last_day" >
-  Last {{definition.config.filters.count_last_day}} day
+  Last {{definition.config.filters.count_last_day}} Day
 </small>
 <span class="widget_filters_info" ng-show="!!definition.config.filters[index.key]" ng-repeat="index in [{key:'os',title:'OS'},{key:'country',title:'Сountry'},{key:'device',title:'Device'}]">
   <small ng-if="!!definition.config.filters[index.key]&& definition.config.filters[index.key]!=='-'">&nbsp;{{index.title}}: {{definition.config.filters[index.key]}}&nbsp;</small>
