--- a/code/dev/parts/dashboard/modals/dashboard-edit-with-options.tpl.html
+++ b/code/dev/parts/dashboard/modals/dashboard-edit-with-options.tpl.html
@@ -18,11 +18,11 @@
     </div>
     <div class="form-group">
       <label>Auto-Refresh</label>
-      <select class="select2 form-control fixed175" ng-model="model.options.autorefresh">
-        <option value="5">Each 5 Minutes</option>
-        <option value="15">Each 15 Minutes</option>
-        <option value="30">Each 30 Minutes</option>
-        <option value="60">Each 1 Hour</option>
+      <select class="select2 form-control fixed155" ng-model="model.options.autorefresh">
+        <option value="1">Every 1 Minute</option>
+        <option value="5">Every 5 Minutes</option>
+        <option value="15">Every 15 Minutes</option>
+        <option value="30">Every 30 Minutes</option>
         <option value="">No Auto-Refresh</option>
       </select>
     </div>
