--- a/code/dev/parts/dashboard/modals/dashboard-new.modal.tpl.html
+++ b/code/dev/parts/dashboard/modals/dashboard-new.modal.tpl.html
@@ -16,10 +16,10 @@
     <div class="form-group">
       <label>Auto-Refresh</label>
       <select class="select2 form-control fixed175" ng-model="model.options.autorefresh">
-        <option value="5">Each 5 Minutes</option>
-        <option value="15">Each 15 Minutes</option>
-        <option value="30">Each 30 Minutes</option>
-        <option value="60">Each 1 Hour</option>
+        <option value="1">Every 1 Minute</option>
+        <option value="5">Every 5 Minutes</option>
+        <option value="15">Every 15 Minutes</option>
+        <option value="30">Every 30 Minutes</option>
         <option value="">No Auto-Refresh</option>
       </select>
     </div>
