--- a/code/parts/dashboard/dashboard-title.tpl.html
+++ b/code/parts/dashboard/dashboard-title.tpl.html
@@ -7,10 +7,10 @@
       <!-- TODO: make directive autorefresh-time-period -->
       <div class="form-group">
         <select class="select2 form-control" ng-model="model.options.autorefresh">
-          <option value="5">Each 5 Minutes</option>
-          <option value="15">Each 15 Minutes</option>
-          <option value="30">Each 30 Minutes</option>
-          <option value="60">Each 1 Hour</option>
+          <option value="1">Every 1 Minute</option>
+          <option value="5">Every 5 Minutes</option>
+          <option value="15">Every 15 Minutes</option>
+          <option value="30">Every 30 Minutes</option>
           <option value="">No Auto-Refresh</option>
         </select>
         <button class="btn btn-info " ng-click="model.refreshNow= true">
