--- a/code/dev/parts/dashboard/widgets/heatmaps/view-gbt-heatmaps.tpl.html
+++ b/code/dev/parts/dashboard/widgets/heatmaps/view-gbt-heatmaps.tpl.html
@@ -1,5 +1,8 @@
 <div class="col-md-12">
-  <div class="alert alert-info" ng-if="_loading">
+  <div class="alert alert-info" ng-if="!config.domain">
+    No data to display
+  </div>
+  <div class="alert alert-info" ng-if="_loading && countryGBTData">
     <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>&nbsp; Loading...
   </div>
   <div id="tooltip-container-gbt{{elId}}" class="tooltip-container"></div>
