--- a/code/dev/parts/dashboard/widgets/top-reports/view-top-10-countries.tpl.html
+++ b/code/dev/parts/dashboard/widgets/top-reports/view-top-10-countries.tpl.html
@@ -1,4 +1,4 @@
-<div class="col-md-12 reports-top-countries">
+<div class="col-md-12 top-reports-countries">
   <!-- <h3>Top 10 Countries</h3> -->
   <div class="alert alert-info" ng-if="!country || !country.length">
     No data to display
