fix label "Last 7 days"

--- a/code/dev/parts/dashboard/modals/edit-widget.tpl.html
+++ b/code/dev/parts/dashboard/modals/edit-widget.tpl.html
@@ -16,7 +16,7 @@
     <!-- <label for="domain">Delay</label> -->
     <select class="form-control fixed" ng-model="config.time_period" ng-disable="!domain">
       <option value="1">Last 1 Day</option>
-      <option value="7">Last 7 Day</option>
+      <option value="7">Last 7 Days</option>
       <option value="30">Last 30 Day</option>
     </select>
 <!--   </div>
