--- a/code/dev/parts/dashboard/widgets/proxy-traffic/edit-proxy-traffic.html
+++ b/code/dev/parts/dashboard/widgets/proxy-traffic/edit-proxy-traffic.html
@@ -10,7 +10,7 @@
     <div class="form-group">
       <select class="form-control fixed" ng-model="config.filters.count_last_day" ng-disabled="!domain">
         <option value="1">Last 1 Day</option>
-        <option value="7">Last 7 Day</option>
+        <option value="7">Last 7 Days</option>
         <option value="30">Last 30 Day</option>
       </select>
     </div>
