--- a/code/dev/parts/reports/filters/time-period.html
+++ b/code/dev/parts/reports/filters/time-period.html
@@ -5,7 +5,7 @@
         <select class="form-control fixed"
                 ng-model="delay">
           <option value="1">Last 1 Day</option>
-          <option value="7">Last 7 Day</option>
+          <option value="7">Last 7 Days</option>
           <option value="30">Last 30 Day</option>
         </select>
       </div>
