--- a/code/parts/dashboard/widgets/edit-proxy-traffic.html
+++ b/code/parts/dashboard/widgets/edit-proxy-traffic.html
@@ -11,7 +11,7 @@
       <select class="form-control fixed" ng-model="config.filters.count_last_day" ng-disabled="!domain">
         <option value="1">Last 1 Day</option>
         <option value="7">Last 7 Days</option>
-        <option value="30">Last 30 Day</option>
+        <option value="30">Last 30 Days</option>
       </select>
     </div>
     <div class="form-group">
