--- a/code/parts/reports/charts/hits-cache.html
+++ b/code/parts/reports/charts/hits-cache.html
@@ -1,6 +1,6 @@
 <h3 class="reports_charts_title">Edge Cache Efficiency Hits</h3>
 <div filter-time-periods
-     ng-hide="!ngDomain"
+     ng-hide="!ngDomain || hideFilters"
      fl-os="flOs"
      fl-country="flCountry"
      fl-device="flDevice"
