--- a/code/dev/parts/profile/edit-company.html
+++ b/code/dev/parts/profile/edit-company.html
@@ -210,7 +210,7 @@
                             <label for="comment"
                                    class="col-sm-2 control-label"
                                    popover-trigger="mouseenter"
-                                   popover="Contact phone number">Comment</label>
+                                   popover="Comment">Comment</label>
 
                             <div class="col-sm-5">
                                 <textarea id="comment"
@@ -220,6 +220,24 @@
                                           ng-disabled="_loading">
 
                                 </textarea>
+                            </div>
+                        </div>
+                        <div class="form-group" ng-if="model.chargify_id">
+                            <label for="comment"
+                                   class="col-sm-2 control-label"
+                                   popover-trigger="mouseenter"
+                                   popover="Billing plan">Billing Plan</label>
+                            <div class="col-sm-10">
+                                <ui-select ng-model="model.billing_plan"
+                                           theme="select2"
+                                           ng-disabled="_loading"
+                                           on-select=""
+                                           style="min-width: 300px;" >
+                                    <ui-select-match placeholder="Select Billing Plan">{{$select.selected.name}}</ui-select-match>
+                                    <ui-select-choices repeat="item.id as item in billing_plans | filter: {name: $select.search}">
+                                        <div ng-bind-html="item.name|highlight: $select.search"></div>
+                                    </ui-select-choices>
+                                </ui-select>
                             </div>
                         </div>
 
@@ -238,14 +256,18 @@
 
                                 <!-- TODO: Need to disable "Edit Billing Profile" button if the billing profile is not active
                                 // TODO: in Chargify  -->
-                                <a href="{{model.billing_portal_link.url}}"
+                                <a ng-if="model.chargify_id" href="{{model.billing_portal_link.url}}"
                                 class="btn btn-primary"
                                 target="_blank"
                                 ng-disabled="_loading || _disabled">
                                     <i class="glyphicon glyphicon-lock"></i>
-                                    Edit Billing Profile</a>
-
-                                <button ng-click="deleteCompanyProfile(model.id)"
+                                    Update Payment Profile</a>
+                                <button class="btn btn-primary"
+                                        ng-if="User.isRevadmin() || User.isReseller()"
+                                        ng-click="createBillingProfile(model)">
+                                    Create Billing Profile
+                                </button>
+                                <button ng-if="model.subscription_id" ng-click="deleteCompanyProfile(model.id)"
                                         class="btn btn-danger pull-right"
                                         ng-disabled="true || _loading || _disabled">
                                     <i class="glyphicon glyphicon-refresh spin" ng-if="_loading"></i>
