Create new module "bluetriangletech" and add new widget "BTT Metrics"

--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -267,6 +267,10 @@
 <script type="text/javascript" src="js/portal/dashboard/components/dashboard-btn-new.component.js"></script>
 <script type="text/javascript" src="js/portal/dashboard/components/dashboard-btn-delete.conmponent.js"></script>
 
+<!-- BlueTriangleTech -->
+<script type="text/javascript" src="js/portal/bluetriangletech/bluetriangletech.module.js"></script>
+<script type="text/javascript" src="js/portal/bluetriangletech/bluetriangletech.values.js"></script>
+<script type="text/javascript" src="js/portal/bluetriangletech/services/BTTPortal.service.js"></script><!-- //BlueTriangleTech-->
 <script type="text/javascript" src="js/portal/app.module.js"></script>
 <script type="text/javascript" src="js/portal/app.config.js"></script>
 <script type="text/javascript" src="js/portal/app.routes.js"></script>
