--- a/code/parts/dashboard/modals/dashboard-edit-with-options.tpl.html
+++ b/code/parts/dashboard/modals/dashboard-edit-with-options.tpl.html
@@ -10,10 +10,12 @@
     </div>
     <div class="form-group">
       <label>Structure</label>
-      <div class="radio" ng-repeat="(key, structure) in structures">
-        <label>
-          <input type="radio" value="{{key}}" ng-model="model.structure" ng-change="changeStructure(key, structure)"> {{key}} {{structure.title}}
-        </label>
+      <div class="dashboard-structure-select list">
+        <div class="dashboard-structure-select-item" ng-repeat="(key, structure) in structures" ng-click="model.structure=key;changeStructure(key, structure)" ng-class="{'active':key==model.structure}">
+          <input type="radio" value="{{key}}" ng-model="model.structure" ng-change="changeStructure(key, structure)">
+          <div class="icon-structure icon-structure--{{key}}" ng-class="{'active':key==model.structure}"></div>
+          <span class="dashboard-structure-select-title"> {{structure.title}}</span>
+        </div>
       </div>
     </div>
     <div class="form-group">
