--- a/code/parts/dashboard/widgets/heatmaps/view-gbt-heatmaps.tpl.html
+++ b/code/parts/dashboard/widgets/heatmaps/view-gbt-heatmaps.tpl.html
@@ -1,9 +1,12 @@
 <div class="col-md-12">
   <div class="alert alert-info" ng-if="!config.domain">
+    Please click on <i class="glyphicon glyphicon-cog"></i> icon to configure the widget
+  </div>
+  <div class="alert alert-info" ng-if="!!config.domain&&!countryGBTData && !_loading">
     No data to display
   </div>
   <div class="alert alert-info" ng-if="_loading && countryGBTData">
-    <i class="glyphicon glyphicon-refresh spin" ng-if="item.loading"></i>&nbsp; Loading...
+    <i class="glyphicon glyphicon-refresh spin" ng-if="_loading"></i>&nbsp; Loading...
   </div>
   <div id="tooltip-container-gbt{{elId}}" class="tooltip-container"></div>
   <div id="canvas-svg-gbt{{elId}}"></div>
