--- a/code/dev/parts/dashboard/widgets/bluetriangletech/edit-bluetriangletech.html
+++ b/code/dev/parts/dashboard/widgets/bluetriangletech/edit-bluetriangletech.html
@@ -8,14 +8,14 @@
   </div>
   <div class="form-inline">
     <div class="form-group">
-      <select class="form-control fixed" ng-model="config.filters.count_last_day" ng-disabled="!domain">
+      <select class="form-control fixed" ng-model="config.filters.count_last_day" ng-disabled="!vm.domain">
         <option value="1">Last 1 Day</option>
         <option value="7">Last 7 Days</option>
         <option value="30">Last 30 Days</option>
       </select>
     </div>
     <div class="form-group">
-      <select id="country" class="form-control fixed" ng-model="config.filters.country" ng-disabled="!domain">
+      <select id="country" class="form-control fixed" ng-model="config.filters.country" ng-disabled="!vm.domain">
         <option value="All Countries">All Countries</option>
         <option ng-repeat="(key, item) in vm.refCountry" value="{{item}}">{{item}}</option>
       </select>
