--- a/code/dev/index.html
+++ b/code/dev/index.html
@@ -261,6 +261,7 @@
 
 <script type="text/javascript" src="js/portal/dashboard/dashboard.module.js"></script>
 <script type="text/javascript" src="js/portal/dashboard/dashboard.routes.js"></script>
+<script type="text/javascript" src="js/portal/dashboard/filters/dashboard.filters.js"></script>
 <script type="text/javascript" src="js/portal/dashboard/services/dashboard.service.js"></script>
 <script type="text/javascript" src="js/portal/dashboard/controller/dashdoard.controller.js"></script>
 <script type="text/javascript" src="js/portal/dashboard/components/dashboard-nav-menu.component.js"></script>
